src/objects/C501_Appointment_Scheduled__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appointments Scheduled</relationshipLabel>
        <relationshipName>Appointments_Scheduled</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointment_Info__c</fullName>
        <formula>C501_Appointment__r.Available_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Info</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>C501_Appointment__c</fullName>
        <label>Appointment</label>
        <referenceTo>C501_Appointment__c</referenceTo>
        <relationshipLabel>Appointments Scheduled</relationshipLabel>
        <relationshipName>Appointments_Scheduled</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>C501_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments Scheduled</relationshipLabel>
        <relationshipName>Appointments_Scheduled</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact_Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>C501_Appointment__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>C501_Appointment__r.Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Text</type>
    </fields>
    <label>Appointment Scheduled</label>
    <nameField>
        <label>Appointment Scheduled Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointments Scheduled</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>